feat: basic syncs for MS Dynamics 365 (#1020)
<!-- Please title your PR using conventional commits
(https://www.conventionalcommits.org/en/v1.0.0/): -->

Fixes: #1016 <!-- Replace this with the GitHub task ID this PR addresses
-->

## Test Plan

Tested locally
